force-app/main/default/objects/Products_on_Cart__c/Products_on_Cart__c.object-meta.xml
<CustomObject>
    <label>Products on Cart</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products on Cart</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>