force-app/main/default/objects/Products_on_Cart__c/fields/CTA__c.field-meta.xml
<CustomField>
    <fullName>CTA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CTA</label>
    <referenceTo>CTA__c</referenceTo>
    <relationshipLabel>Products on Cart</relationshipLabel>
    <relationshipName>Products_on_Cart</relationshipName>
    <type>Lookup</type>
</CustomField>