force-app/main/default/objects/Products_on_Cart__c/fields/Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Products on Cart</relationshipLabel>
    <relationshipName>Products_on_Cart</relationshipName>
    <type>Lookup</type>
</CustomField>