force-app/main/default/objects/Products_on_Cart__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Products on Cart</relationshipLabel>
    <relationshipName>Products_on_Cart</relationshipName>
    <type>Lookup</type>
</CustomField>