force-app/main/default/objects/Products_on_Cart__c/fields/Product_id__c.field-meta.xml
<CustomField>
    <fullName>Product_id__c</fullName>
    <label>Product Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>