force-app/main/default/objects/Products_on_Cart__c/fields/Quanitity__c.field-meta.xml
<CustomField>
    <fullName>Quanitity__c</fullName>
    <label>Quanitity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>