force-app/main/default/objects/Products_on_Cart__c/fields/sku__c.field-meta.xml
<CustomField>
    <fullName>sku__c</fullName>
    <label>sku</label>
    <length>255</length>
    <type>Text</type>
</CustomField>